--- a/src/classes/Session.cls
+++ b/src/classes/Session.cls
@@ -1,6 +1,16 @@
 public virtual class Session {
 
+    private Id contactId; // cache
+
+    /**
+     * Return ID of the Contact associated with this user. 
+     * If Communities isn’t enabled for the user’s organization or the user is currently in the internal organization, returns fakeContactId.
+     */
     public Id contactId() {
+        if (contactId != null) {
+            return contactId;
+        }
+
         String id = Network.getNetworkId();
         if (id == null) {
             return fakeContactId();
@@ -11,7 +21,14 @@ public virtual class Session {
         }
     }
 
-    public virtual Id slaveId() { return null; }
-
+    /**
+     * While Communities isn’t enabled for the user’s organization or the user is currently in the internal organization, for development, you want the contact id as entry point of session user, extends this method.
+     */
     public virtual Id fakeContactId() { return null; }
+
+    /**
+     * Return the contact's slave id.
+     * If your application use CustomObject as to extend account information, override this method.
+     */
+    public virtual Id slaveId() { return null; }
 }
