--- a/src/classes/ValidationErrorFormat.cls
+++ b/src/classes/ValidationErrorFormat.cls
@@ -1,21 +1,7 @@
-public class ValidationErrorFormat {
-    public String requiredErrorFormat() {
-        return 'field {0} is required';
-    }
-
-    public String badPatternErrorFormat() {
-        return 'field {0} is bad pattern. Input by {1}';
-    }
-
-    public String tooLongErrorFormat() {
-        return 'field {0} is bad pattern. Input by {1}';
-    }
-
-    public String bigErrorFormat() {
-        return 'field {0} is bad pattern. Input by {1}';
-    }
-
-    public String smallErrorFormat() {
-        return 'field {0} is bad pattern. Input by {1}';
-    }
+public interface ValidationErrorFormat {
+    String requiredErrorFormat();
+    String badPatternErrorFormat();
+    String tooLongErrorFormat();
+    String bigErrorFormat();
+    String smallErrorFormat();
 }
